# options-research-platform

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/agents/: __init__.py  evaluator.py  market_research.py  memory.py  monitor.py  orchestrator.py  risk_assessment.py  strategy.py  tools.py
app/agents/prompts/: evaluator.txt  market_research.txt  monitor.txt  risk_assessment.txt  strategy.txt
app/analytics/: __init__.py  chain.py  greeks.py  iv_surface.py  oi_analysis.py
app/api/: deps.py  main.py
app/api/routers/: analytics.py  auth.py  backtest.py  market.py  paper.py  positions.py  research.py  settings.py  signals.py
app/api/schemas/: __init__.py  analytics.py  backtest.py  market.py  paper.py  research.py  signals.py
app/api/websocket/: __init__.py  handlers.py
app/backtester/: __init__.py  broker.py  clock.py  engine.py  metrics.py
app/backtester/strategies/: __init__.py  base.py  long_straddle.py
app/core/: calendar.py  config.py  constants.py  db.py  redis.py
app/market_data/: __init__.py  kite.py  news.py  normalizer.py  nse.py
app/monitor/: __init__.py  greeks_live.py  watcher.py
app/notification/: __init__.py  email.py  telegram.py
app/paper_trader/: __init__.py  fill_engine.py  pnl.py  portfolio.py
app/risk/: __init__.py  gates.py  sizer.py  var.py
app/signal/: __init__.py  filters.py  scorer.py
app/signal/detectors/: __init__.py  iv_detector.py  oi_detector.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/positions/: page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/components/: Nav.tsx  Shell.tsx  SignalCard.tsx
frontend/src/components/charts/: EquityCurve.tsx  (+3 more)
frontend/src/hooks/: useAnalytics.ts  usePositions.ts  useSignals.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts  websocket.ts
frontend/src/stores/: marketStore.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
models/: __init__.py  agent_runs.py  backtest_runs.py  instruments.py  market_research.py  ohlcv.py  options_chain.py  paper_trades.py  positions.py  signals.py
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: backfill.py  market_calendar.py  seed_admin.py
tasks/: __init__.py  agents.py  backtest.py  market_data.py  monitor.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_health.py  test_risk.py
(+2 files in other folders)
