[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "options-research-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # ── Web Framework ────────────────────────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # ── Database ─────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",      # Alembic sync driver

    # ── Redis / Celery ───────────────────────────────────────────────────────
    "redis>=5.0",
    "celery[redis]>=5.3",

    # ── Auth ─────────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "pydantic-settings>=2.2",

    # ── LLM ──────────────────────────────────────────────────────────────────
    "anthropic>=0.30",
    "openai>=1.35",              # Groq + Ollama via OpenAI-compat interface

    # ── Options Analytics ─────────────────────────────────────────────────────
    "py-vollib>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",

    # ── Kite Connect ─────────────────────────────────────────────────────────
    "kiteconnect>=5.0",

    # ── HTTP / Scraping ───────────────────────────────────────────────────────
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",

    # ── Resilience ───────────────────────────────────────────────────────────
    "tenacity>=8.3",

    # ── Logging ──────────────────────────────────────────────────────────────
    "structlog>=24.1",

    # ── Monitoring ───────────────────────────────────────────────────────────
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",

    # ── Notifications ─────────────────────────────────────────────────────────
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "factory-boy>=3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tasks*", "models*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
